WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
163340
[SOUP] trunk
r207192
fails to compile due to missing std::function being unavailable (missing #include <functional>)
https://bugs.webkit.org/show_bug.cgi?id=163340
Summary
[SOUP] trunk r207192 fails to compile due to missing std::function being unav...
Jeremy Huddleston Sequoia
Reported
2016-10-12 10:05:45 PDT
In file included from Source/WebCore/platform/network/soup/SoupNetworkSession.cpp:30: /opt/local/var/macports/build/_Users_jeremy_src_macports_trunk_dports_www_webkit2-gtk-devel/webkit2-gtk-devel/work/webkit-91ef51ea3f538ade6f168a1d701dab90bfbee4db/Source/WebCore/platform/network/soup/SoupNetworkSession.h:67:60: error: no template named 'function' in namespace 'std'; did you mean 'Function'? static void checkTLSErrors(SoupRequest*, SoupMessage*, std::function<void (const ResourceError&)>&&); ^~~~~~~~~~~~~ Function Source/WTF/wtf/Forward.h:70:12: note: 'Function' declared here using WTF::Function; ^ Source/WebCore/platform/network/soup/SoupNetworkSession.cpp:330:26: error: out-of-line definition of 'checkTLSErrors' does not match any declaration in 'WebCore::SoupNetworkSession' void SoupNetworkSession::checkTLSErrors(SoupRequest* soupRequest, SoupMessage* message, std::function<void (const ResourceError&)>&& completionHandler) ^~~~~~~~~~~~~~ 2 errors generated. --- It looks like a missing #include <functional> in
r206807
,
https://bugs.webkit.org/show_bug.cgi?id=162910
Attachments
0001-Fix-a-build-failure-with-clang-due-to-std-function-u.patch
(1.65 KB, patch)
2016-10-12 10:13 PDT
,
Jeremy Huddleston Sequoia
mcatanzaro
: review+
cgarcia
: commit-queue-
Details
Formatted Diff
Diff
0001-SOUP-trunk-r207192-fails-to-compile-due-to-missing-s.patch
(1.71 KB, patch)
2016-10-12 11:16 PDT
,
Jeremy Huddleston Sequoia
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Jeremy Huddleston Sequoia
Comment 1
2016-10-12 10:13:13 PDT
Created
attachment 291365
[details]
0001-Fix-a-build-failure-with-clang-due-to-std-function-u.patch
Carlos Garcia Campos
Comment 2
2016-10-12 10:17:09 PDT
Comment on
attachment 291365
[details]
0001-Fix-a-build-failure-with-clang-due-to-std-function-u.patch View in context:
https://bugs.webkit.org/attachment.cgi?id=291365&action=review
Thanks
> Source/WebCore/ChangeLog:4 > + Fix a build failure with clang due to std::function usage without #include <functional> > +
https://bugs.webkit.org/show_bug.cgi?id=163340
Please, use the bug title here, prepare-changelog should do that for you.
Jeremy Huddleston Sequoia
Comment 3
2016-10-12 10:33:53 PDT
Oh cool. I thought it just created a template in the ChangeLog that I fill out with the title and the URL. I didn't realize I could pass args to it to do the dirty work for me! I need to head out, but I'll get an update later today.
Jeremy Huddleston Sequoia
Comment 4
2016-10-12 11:16:09 PDT
Created
attachment 291370
[details]
0001-SOUP-trunk-
r207192
-fails-to-compile-due-to-missing-s.patch Updated ChangeLog to match title of the bug report
WebKit Commit Bot
Comment 5
2016-10-12 12:21:35 PDT
Comment on
attachment 291370
[details]
0001-SOUP-trunk-
r207192
-fails-to-compile-due-to-missing-s.patch Clearing flags on attachment: 291370 Committed
r207232
: <
http://trac.webkit.org/changeset/207232
>
WebKit Commit Bot
Comment 6
2016-10-12 12:21:39 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug