[SOUP] trunk r207192 fails to compile due to missing std::function being unavailable (missing #include <functional>) https://bugs.webkit.org/show_bug.cgi?id=163340

Patch by Jeremy Huddleston Sequoia <jeremyhu@apple.com> on 2016-10-12
Reviewed by Michael Catanzaro.

* platform/network/soup/SoupNetworkSession.h: Add missing #include <functional>

Canonical link: https://commits.webkit.org/181180@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@207232 268f45cc-cd09-0410-ab3c-d52691b4dbfc